# pixoo-dashboard

./: .env.example  .gitignore  LICENSE  README.md  com.divoom-hub.dashboard.plist  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/resolved/: animations-too-subtle-and-uniform.md  device-offline-no-discord.md  discord-message-layout-rework.md  discord-message-overlaps-weather.md  discord-message-wrong-position.md  divoom-device-freeze.md  emoji-crashes-dashboard.md  moon-icon-bad-pixel-art.md  partcloud-night-icon-bad.md  pixoo-push-frame-timeout.md  sunrays-showing-at-night.md  weather-animation-too-subtle.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-bus-departures/: 02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-weather/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-02-22-seasonal-night-mode-and-layered-weather-animations-design.md  2026-02-22-seasonal-night-mode-and-layered-weather-animations.md  2026-02-23-sun-ray-overhaul-design.md  2026-02-23-sun-ray-overhaul.md  2026-02-24-device-keep-alive-design.md  2026-02-24-device-keep-alive.md
src/: circuit_breaker.py  config.py  dashboard_state.py  main.py  staleness.py  watchdog.py
src/device/: keepalive.py  pixoo_client.py
src/display/: animation_selector.py  fonts.py  layout.py  renderer.py  state.py  text_utils.py  weather_anim.py  weather_icons.py
src/providers/: bus.py  clock.py  discord_bot.py  discord_monitor.py  geocode.py  sun.py  weather.py
tests/: test_bus_provider.py  test_circuit_breaker.py  test_clock.py  test_discord_bot.py  test_discord_monitor.py  test_fonts.py  test_keepalive.py  test_main.py  test_pixoo_client.py  test_renderer.py  test_staleness.py  test_sun_provider.py  test_watchdog.py  test_weather_anim.py  test_weather_provider.py
(+82 files in other folders)
