[project]
name = "pixoo-dashboard"
version = "1.0.0"
description = "Always-on Pixoo 64 dashboard: clock, bus departures, and weather at a glance"
requires-python = ">=3.10"
dependencies = [
    "pixoo",
    "Pillow>=12.1.0",
    "discord.py>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Entry point needs sys.path manipulation before src.* imports
"src/main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
