[project]
name = "pixoo-dashboard"
version = "1.2.0"
description = "Always-on Pixoo 64 dashboard: clock, bus departures, and weather at a glance"
requires-python = ">=3.10"
dependencies = [
    "pixoo>=0.5,<1.0",
    "Pillow>=10.0,<14",
    "python-dotenv>=1.0,<2",
    "astral>=3.2,<4",
    "requests>=2.28,<3",
]

[project.optional-dependencies]
discord = ["discord.py>=2.0,<3"]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Entry point needs sys.path manipulation before src.* imports
"src/main.py" = ["E402"]
# Animation/display code uses random for visuals, not crypto; md5 for deterministic hashing
"src/display/weather_anim.py" = ["S311"]
"src/display/renderer.py" = ["S311", "S324"]
# Discord retry uses random jitter, not crypto
"src/providers/discord_bot.py" = ["S311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Image.Image.getdata is deprecated:DeprecationWarning",
]
